syntax = "proto3";

package price_tracker;

option go_package = "gitlab.crja72.ru/golang/2025/spring/course/projects/go2/price-tracker/price-monitoring";

service Scraper{
    rpc GetItem (GetItemRequest) returns (GetItemResponse);
    rpc GetAllItems (GetAllItemsRequest) returns (GetAllItemsResponse);
}

message ItemResponse{
    string name = 1;
    float start_price = 2;
    float current_price = 3;
    float diff_price = 4;
}

message GetItemRequest{
    string link = 1;
    string user_id = 2;
}

message GetItemResponse{
    ItemResponse item = 1;
}

message GetAllItemsRequest{
    string user_id = 1;
}

message GetAllItemsResponse{
    repeated ItemResponse items = 1;
}
